2014-02-07  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.cpp : Fixing #65 code generation for CALL USING
		LOCAL-STORAGE items with sub-items
	* naming.cpp : Fix C++ compiler errors when using reserved C(++)
		words as COBOL words (by uppercasing them)

2014-02-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.cpp : Fixing #64 code generation on OCCURS clause with 1 entry

2014-02-05  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.cpp : Fixing #63 code generation for BASED items in modules
		(duplicate output to storage, missing cast and address)

2014-01-07  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 

	* typeck.cpp : Bugfix: no exception check for NULL address on FREE statement
		(as this is explicit allowed)

2014-01-02  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.cpp : Fixing Bug #55
		UDF with no parameters do not compile

2012-05-09  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* cobc.cpp : Added conversion for enabling options in WIN style

201?-??-??  ??

	* parser.* : Added checks for RETURNING item: OCCURS, LOCAL-STORAGE

2013-06-12  Sergey Kashyrin <ska@kiska.net>

	* Switch to C++

2010-06-28  Roger While <simrw@sim-basis.de>

	* MARK - Version 2.0
	* Move to GPL/LGPL 3

20??-??-??  Simon 'human' Sobisch

   * codegen.c : Simplify by handling stuff for different compilers
       by general define (COB_ALIGN)

20??-??-??  Roger While <simrw@sim-basis.de>

   * cobc.c, cobc.h, tree.h : Simplify by handling stuff for 
       different compilers by general defines (CB_COPT_x, COB_A_...),
       added parsing step and source name to verbose messages,
       added some comments

20??-??-??  Simon 'human' Sobisch

   * cobc.c, cobc.h, tree.c, typeck.c : adjustments for MSC,
       fix some compiler warnings, support possible spaces in different
       path names, enable linking of already assembled modules for
       different UNIXes
